--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,7 +132,7 @@ endif()
 if(ENABLE_SSE42 AND (CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|AMD64"))
     message(STATUS "SSE4.2 enabled for x86_64")
     if(MSVC)
-        SET(SSE42_COMPILE_OPTION /arch:SSE4.2)
+        SET(SSE42_COMPILE_OPTION /arch:AVX2)
     else()
         SET(SSE42_COMPILE_OPTION -msse4.1 -msse4.2)
     endif()
