--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,8 +42,9 @@ jobs:
       - name: Install vulkan-sdk (MSVC)
         if: ${{ matrix.target == 'msvc' }}
         run: |
-          wget https://sdk.lunarg.com/sdk/download/1.4.304.1/windows/VulkanSDK-1.4.304.1-Installer.exe -O D:/a/_temp/vulkan.exe
-          D:/a/_temp/vulkan.exe --accept-licenses --default-answer --confirm-command install
+          Invoke-WebRequest -Uri https://sdk.lunarg.com/sdk/download/1.4.304.1/windows/VulkanSDK-1.4.304.1-Installer.exe -OutFile ${{ runner.temp }}\vulkan.exe
+          ${{ runner.temp }}\vulkan.exe --accept-licenses --default-answer --confirm-command install
+        shell: pwsh
       - name: Disable line ending translation
         run: git config --global core.autocrlf input
       - name: Build
